# bashu-onlinejudge

./: .gitignore  .travis.yml  README.md  client.py  client_ruby.rb  test_mutex.rb
.openshift/action_hooks/: build  deploy  pre_build  start  stop
daemon/: Compiling mysql client on windows.txt  INI1.26.h  Makefile  Makefile_linux  Makefile_win  call_ruc.cpp  cena_validator.cpp  chat_server.js  conf_items.h  config.ini  database.cpp  http.cpp  inet_aton.c  json_builder.cpp  judge.cpp  judge_daemon.h  manager.cpp  readconfig.cpp  runner_linux.c  validator.c
daemon/libsablebox/: .block.c.swp  .sablebox.c.swp  .sablebox.h.swp  .scaffold.c.swp  1003.out  1003re  1003re.cpp  1500.in  1500.out  1500ac  1500ac.cpp  2000mle  2000mle.cpp  3172.in  block  block.c  caller_helloworld.c  futex  futex.cpp  futex_test  futex_test.cpp  helloworld  helloworld.c  makefile  mle_dyn  mle_dyn.cpp  mle_static  mle_static.cpp  re_div0  re_div0.cpp  re_seg  re_seg.cpp  sable-syscallent.h  sablebox.c  sablebox.h  scaffold  scaffold.c  syscallnum.h  tle  tle.c  (+2 more)
daemon/libsablebox/src/: Makefile.am  Makefile.in  pink-bitness.c  pink-decode-array.c  pink-freebsd-event.c  pink-freebsd-name-amd64.c  pink-freebsd-name-i386.c  pink-freebsd-trace-amd64.c  pink-freebsd-trace-i386.c  pink-freebsd-trace.c  pink-freebsd-util.c  pink-linux-event.c  pink-linux-name-arm.c  pink-linux-name-ia64.c  pink-linux-name-powerpc.c  pink-linux-name-x86.c  pink-linux-name-x86_64.c  pink-linux-socket.c  pink-linux-trace-arm.c  pink-linux-trace-ia64.c  pink-linux-trace-powerpc.c  pink-linux-trace-x86.c  pink-linux-trace-x86_64.c  pink-linux-trace.c  pink-linux-util.c  pink-trace-internal.c
daemon/libsablebox/src/easy/: Makefile.am  Makefile.in  pink-easy-attach.c  pink-easy-call.c  pink-easy-context.c  pink-easy-error.c  pink-easy-exec.c  pink-easy-internal.c  pink-easy-loop.c  pink-easy-process.c
daemon/libsablebox/src/freebsd/: Makefile.am  Makefile.in  pink-syscallent.conf
daemon/libsablebox/src/freebsd/amd64/: Makefile.am  Makefile.in  pink-fbsd32.conf
daemon/libsablebox/src/linux/: Makefile.am  Makefile.in
daemon/libsablebox/src/linux/arm/: Makefile.am  Makefile.in  pink-syscallent-arch.h  pink-syscallent.h
daemon/libsablebox/src/linux/ia64/: Makefile.in  pink-syscallent.h
daemon/libsablebox/src/linux/powerpc/: Makefile.am  Makefile.in  pink-syscallent.h
daemon/libsablebox/src/linux/x86/: Makefile.in  pink-syscallent.h
daemon/libsablebox/src/linux/x86_64/: Makefile.in  pink-syscallent.h
daemon/monitor/: oj_monitor.c
daemon/mysql/mysql_win/: my_config.h  mysql_version.h  mysqld_ername.h  mysqld_error.h
daemon/openshift_bin/include/: my_config.h
daemon/openshift_bin/lib/: libm.so.6  libmicrohttpd.la  libmicrohttpd.so.10.16.1  libmysql.so.16  libmysql.so.16.0.0
daemon/test/: .test_validator.c.swp  .validator.c.swp  README  std_identical.txt  std_multi.txt  test_validator  test_validator.c  user_invalid.txt  validator.c
daemon/test/validator_test/: .test_validator.c.swp  .validator.c.swp  makefile  test_validator  test_validator.c  validator.c
daemon/win32_ruc/win32_ruc/: ruc.cpp  win32_ruc.sln  win32_ruc.vcproj
daemon/win32_ruc/win32_run_compiler/: main.cpp  win32_run_compiler.vcproj
daemon/windows_binary/: config.ini
doc/: database_convert.sql  database_convert.txt  init.sql  init_score.py  nginx.conf  spj_example.c
web/assets/Mathjax/: README.md
web/assets/css/: cerulean.min.css  docs.css  ex.css  font-awesome.min.css
web/assets/js/: bbcode.js  bootstrap.js  bootstrap.min.js  chat.js  common.js
web/code/: about.php  admin.php  admin_auth.php  ajax_admin.php  ajax_checkmail.php  ajax_deletemail.php  ajax_deleteprob.php  ajax_mailfunc.php  ajax_message.php  ajax_opensource.php  ajax_preferences.php  ajax_prob.php  ajax_profile.php  ajax_saveproblem.php  ajax_search.php  ajax_sendmail.php  ajax_showmail.php  ajax_testcase.php  ajax_usage.php  ajax_user.php  ajax_usernote.php  auth.php  backupcode.php  board.php  category.php  common.js  control.php  download.php  edit.js  edit.php  editproblem.php  head.php  ie6.min.css  index.php  level.php  login.php  logoff.php  mail.php  marked.php  newproblem.php  (+20 more)
web/code/inc/: checklogin.php  checkpwd.php  cookie.php  database.php  judge_backend.php  lang_conf.php  mail_flags.php  mathjax_head.php  mutex.php  preferences.php  problem_flags.php  result_type.php  (+2 more)
(+36 files in other folders)
